fixed broken style

--- a/react-rpg/src/App.css
+++ b/react-rpg/src/App.css
@@ -2,10 +2,10 @@
   height: 100%;
   width: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
   background-image: url('./Assets/back.jfif');
-  background-size: contain;
+  background-size:auto;
   background-repeat: no-repeat;
 }
 
