--- a/react-rpg/src/Components/Card/Card.css
+++ b/react-rpg/src/Components/Card/Card.css
@@ -1,6 +1,6 @@
 .card{
-    height: 450px;
-    width: 400px;
+    height: 200px;
+    width: 180px;
     color: aliceblue;
     background-color: rgb(0, 0, 0);
     
@@ -17,23 +17,20 @@
 }
 
 .card h3 {
-    font-size: 60px;
+    font-size: 25px;
 }
 
 .description {
     display: none;
     background: rgba(0, 0, 0, 0.527);
     color: #fff;
-    position: fixed;
-    top:0;
-    bottom: 0;
-    left: 100%;
-    right: 0;
+    position:relative;
     width: 100%;
-    height: 200%;
+    height: fit-content;
     visibility: hidden;
     transition: 0.3s;
     padding: 20px;
+    font-size: 1.3rem;
 }
   
   /* Show the description on card hover */
@@ -42,7 +39,5 @@
     background-color: #000000c7;
     visibility: visible;
     transition: 0.3s;
-    font-size: 50px;
     box-shadow: 0 0 60px #ff7627;  
-    
   }
