--- a/react-rpg/src/Components/CardGrid/cardgrid.css
+++ b/react-rpg/src/Components/CardGrid/cardgrid.css
@@ -1,21 +1,17 @@
 .card-grid {
-    height: 85%;
+    height: 60%;
     display: grid;
     overflow-y: scroll;
-	
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    grid-template-rows: 1fr 1fr;
-    padding: 40px;
-	grid-gap: 20px; 
-    
-    
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    padding: 5rem;
+	grid-gap: 2rem;
 }
 
 ::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	border-radius: 10px;
-	background-color: #ff8036;
+	background-color: #6c5649;
 }
 ::-webkit-scrollbar
 {
@@ -27,5 +23,5 @@
 {
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #fc8c03;
+	background-color: #633c14;
 }
