--- a/react-rpg/src/Components/Container/container.css
+++ b/react-rpg/src/Components/Container/container.css
@@ -6,13 +6,9 @@
         border-right-color:rgb(61, 45, 34);
         border-top-color:#a7997f;
         box-shadow: 0 50px 100px 50px rgb(37, 21, 5);
-        margin:5vh 5vw;
+        margin:2rem;
         height:90vh;
         width: 90vh;
         float: right;
         overflow: hidden;
-     
-        
-        
-        
 }
